chatbot made my talha and harish

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2024/11/02/14/20241102144544-2BLMB6NQ.js"></script>
+    
   </body>
 </html>
